--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "stop": "node "
+    "stop": "pkill --signal SIGINT myApp"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
